--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prep-lab10",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Overview",
   "main": "index.js",
   "scripts": {
     "test": "jest"
@@ -18,6 +18,6 @@
   },
   "homepage": "https://github.com/Eng-Ahmad-Almohammad/prep-lab10#readme",
   "devDependencies": {
-    "jest": "^27.4.7"
+    "jest": "^27.5.1"
   }
 }
